# cpis-2015

./: .gitignore  README.md  pyproject.toml
configs/: defaults.yaml  regions.yaml
data/anchors_prepared/anchor_truth/: summary.json
data/anchors_prepared/anchor_truth/overlays/: stable_background_points.gpkg  study_area.gpkg
scripts/: copy_from_old_repo.sh  setup_data.sh
src/cpis/: config.py  constants.py  file_utils.py  geo_utils.py  region_filter.py
src/cpis/data/: build_dataset.py  merge_labels.py  prepare_anchors.py  rasterize_labels.py
src/cpis/eval/: cocoeval.py  eval_file.py  prepare_gold.py  run_gold.py
src/cpis/gee/: __init__.py  export_year.py
src/cpis/instseg/: config.py  infer.py  train.py
src/cpis/instseg/mm_overrides/apis/: train.py
src/cpis/instseg/mm_overrides/datasets/pipelines/: loading.py
src/cpis/post/: merge_tiles.py
src/cpis/semseg/: infer.py  model.py  postprocess.py  train.py
